# scurry_api

./: .envrc  .envrc.example  Cargo.toml  README.md  pubspec.yaml
lib/: user.dart
lib/provider/database/: database.dart
lib/user/: user.dart
migrations/: 20230428132048_create_users.up.sql  20230428132056_create_scurries.down.sql  20230428132056_create_scurries.up.sql
routes/api/auth/: authenticate.dart  register.dart
routes/hello/: [name].dart
src/: main.rs
src/api/: auth.rs  cors.rs  jwt.rs  mod.rs  state.rs  user.rs
