[package]
name = "scurry_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
chrono = "0.4.24"
jsonwebtoken = "8.3.0"
rocket = {version = "=0.5.0-rc.3", features = ["json", "msgpack", "uuid"]}
sha2 = "0.10.6"
uuid = {version = "1.3.1", features = ["v4"]}
postgrest = "1.5.0"